<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SendNotificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:lineHeight="24dp"
                android:text="@string/send_warning"
                android:textColor="@color/greenPrimary"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/groupRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:checkedButton="@id/radioApelKesiapsiagaan">

                <RadioButton
                    android:id="@+id/radioApelKesiapsiagaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:letterSpacing="0.08"
                    android:padding="16dp"
                    android:text="@string/apel_kesiapsiagaan"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioApelLuarBiasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:letterSpacing="0.08"
                    android:padding="16dp"
                    android:text="@string/apel_luar_biasa"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioBantuanKepolisian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:letterSpacing="0.08"
                    android:padding="16dp"
                    android:text="@string/bantuan_kepolisian"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioAlarmStelling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:letterSpacing="0.08"
                    android:padding="16dp"
                    android:text="@string/alarm_stelling"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioBahayaKebakaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:letterSpacing="0.08"
                    android:padding="16dp"
                    android:text="@string/bahaya_kebakaran"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioBencanaAlam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:letterSpacing="0.08"
                    android:padding="16dp"
                    android:text="@string/bencana_alam"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioTandaAman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:letterSpacing="0.08"
                    android:padding="16dp"
                    android:text="@string/tanda_aman"
                    android:textSize="16sp" />

            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/exfabSend"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="24dp"
            app:backgroundTint="@color/greenPrimary"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>