<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bottomsheet.BottomSheetSendMessage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:layout_margin="24dp"/>

    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/linearRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center|start"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/all_rounded"
            android:fontFamily="@font/montserrat_bold"
            android:padding="16dp"
            android:src="@drawable/ic_send"
            android:textColor="@color/greenPrimary" />

        <LinearLayout
            android:gravity="center|start"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/regular_message"/>

            <TextView
                android:layout_marginTop="4sp"
                android:textSize="12sp"
                android:textColor="@color/grayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/desc_regular_message"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/browser_actions_bg_grey"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"/>

    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/linearDanger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center|start"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/all_rounded"
            android:fontFamily="@font/montserrat_bold"
            android:padding="16dp"
            android:src="@drawable/ic_danger"
            android:textColor="@color/greenPrimary" />

        <LinearLayout
            android:gravity="center|start"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/danger_message"/>

            <TextView
                android:layout_marginTop="4sp"
                android:textSize="12sp"
                android:textColor="@color/grayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/desc_danger_message"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>